Closed
Bug 859158
Opened 12 years ago
Closed 12 years ago
ifdef DEBUG unused in imgRequest.cpp
Categories
(Core :: Graphics: ImageLib, defect)
Tracking
()
RESOLVED
FIXED
mozilla23
People
(Reporter: luis, Assigned: luis)
Details
Attachments
(2 files, 2 obsolete files)
771 bytes,
patch
|
RyanVM
:
checkin+
|
Details | Diff | Splinter Review |
719 bytes,
patch
|
RyanVM
:
checkin+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:19.0) Gecko/20100101 Firefox/19.0
Build ID: 20130311191316
Steps to reproduce:
There is an unused ifdef DEBUG, only containing a comment, around line 670 of imgRequest.cpp
#ifdef DEBUG
/* NS_WARNING if the content type from the channel isn't the same if the sniffing */
#endif
Assignee | ||
Comment 1•12 years ago
|
||
Assignee | ||
Comment 2•12 years ago
|
||
In a related note concerning the same file. Should the line that says:
#ifdef DEBUG_joe
should be?
#ifdef DEBUG
Assignee | ||
Updated•12 years ago
|
Attachment #734416 -
Flags: review?
Comment 3•12 years ago
|
||
Comment on attachment 734416 [details] [diff] [review]
Patch to remove the unused ifdef DEBUG
You should request a review from a person or you patch might be lost
Attachment #734416 -
Flags: review? → review?(jmuizelaar)
Updated•12 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
Assignee | ||
Updated•12 years ago
|
Attachment #734416 -
Flags: review?(mbrubeck)
Comment 4•12 years ago
|
||
Comment on attachment 734416 [details] [diff] [review]
Patch to remove the unused ifdef DEBUG
Review of attachment 734416 [details] [diff] [review]:
-----------------------------------------------------------------
I'll leave this to jmuizelaar to review.
Attachment #734416 -
Flags: review?(mbrubeck)
Assignee | ||
Updated•12 years ago
|
Assignee: nobody → luis
Comment 5•12 years ago
|
||
Comment on attachment 734416 [details] [diff] [review]
Patch to remove the unused ifdef DEBUG
Review of attachment 734416 [details] [diff] [review]:
-----------------------------------------------------------------
I didn't write the comment. So I'm not sure if it should go away.
Comment 6•12 years ago
|
||
Comment on attachment 734416 [details] [diff] [review]
Patch to remove the unused ifdef DEBUG
Review of attachment 734416 [details] [diff] [review]:
-----------------------------------------------------------------
Moving the review to joe. He'll be back from vacation later this week.
Attachment #734416 -
Flags: review?(jmuizelaar) → review?(joe)
Assignee | ||
Comment 7•12 years ago
|
||
Those lines have been there since hg@1
http://hg.mozilla.org/mozilla-central/diff/9b2a99adc05e/modules/libpr0n/src/imgRequest.cpp
Except the change s/NS_DEBUG/DEBUG in 2012
http://hg.mozilla.org/mozilla-central/rev/db9fc4c50e24
Assignee | ||
Comment 8•12 years ago
|
||
quick patch to change the ifdef DEBUG_joe to ifdef DEBUG
Assignee | ||
Updated•12 years ago
|
Attachment #735454 -
Flags: review?(joe)
Comment 9•12 years ago
|
||
Comment on attachment 735454 [details] [diff] [review]
DEBUG_joe?
Review of attachment 735454 [details] [diff] [review]:
-----------------------------------------------------------------
just remove this DEBUG_joe stuff - CACHEPUT and CACHEGET were used for very, very early debugging when I rewrote the image cache, and there's no reason to spam everyone's consoles with this.
Attachment #735454 -
Flags: review?(joe) → review-
Comment 10•12 years ago
|
||
Comment on attachment 734416 [details] [diff] [review]
Patch to remove the unused ifdef DEBUG
Review of attachment 734416 [details] [diff] [review]:
-----------------------------------------------------------------
Yeah this is totally unnecessary.
Attachment #734416 -
Flags: review?(joe) → review+
Assignee | ||
Comment 11•12 years ago
|
||
Thanks Joe :)
Attachment #734416 -
Attachment is obsolete: true
Attachment #736814 -
Flags: checkin?
Assignee | ||
Comment 12•12 years ago
|
||
second part
Attachment #735454 -
Attachment is obsolete: true
Attachment #736815 -
Flags: checkin?
Comment 13•12 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/f81774f097c3
https://hg.mozilla.org/integration/mozilla-inbound/rev/c7fc583deeb3
Flags: in-testsuite-
Updated•12 years ago
|
Attachment #736814 -
Flags: checkin? → checkin+
Updated•12 years ago
|
Attachment #736815 -
Flags: checkin? → checkin+
Comment 14•12 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/f81774f097c3
https://hg.mozilla.org/mozilla-central/rev/c7fc583deeb3
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla23
You need to log in
before you can comment on or make changes to this bug.
Description
•