Bug 859158 - Remove unneeded ifdef DEBUG_joe. r=joedrew